# electronetworktool

./: .gitignore  CMakeLists.txt  index.css  index.html  index.js  main.cpp  main.js  package.json  preload.js
src/: CMakeLists.txt  main.cpp  tcp.cpp  tcp.h
ui/: index.css  index.html  index.js  main.js  preload.js
